# chronoq

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  demo.py  docker-compose.yml  pyproject.toml
.claude/: settings.json
.claude/agents/: benchmark-analyst.md  claude-master.md  docs-writer.md  library-architect.md  ml-engineer.md  product-manager.md  project-manager.md  qa-validator.md  senior-backend-dev.md
.claude/commands/: architecture-check.md  bench-smoke.md  bench.md  boundary-check.md  chunk-review.md  claude-audit.md  coverage.md  fix.md  integration-test.md  ml-review.md  prd-check.md  release.md  status.md  sync-docs.md  test.md  validate.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml
bench/: CLAUDE.md  pyproject.toml
bench/chronoq_bench/: __init__.py  simulator.py
bench/chronoq_bench/baselines/: fcfs.py  priority_fcfs.py  random_sched.py  sjf_oracle.py  srpt_oracle.py
bench/chronoq_bench/experiments/: ablation_features.py  drift_recovery.py  jct_vs_concurrency.py  jct_vs_load.py
bench/chronoq_bench/metrics/: jct.py  ranking.py
bench/chronoq_bench/plots/: base.py
bench/chronoq_bench/traces/: azure.py  base.py  borg.py  burstgpt.py  cache.py  synthetic.py
bench/fixtures/: azure_ci_sample.parquet  borg_ci_sample.parquet  burstgpt_ci_sample.parquet
chronoq_predictor/: CLAUDE.md  pyproject.toml
chronoq_predictor/chronoq_predictor/: config.py  features.py
chronoq_predictor/chronoq_predictor/models/: gradient.py
chronoq_predictor/chronoq_predictor/storage/: __init__.py  sqlite.py
chronoq_server/chronoq_server/: __init__.py  config.py  main.py  task_registry.py
chronoq_server/chronoq_server/api/: __init__.py  metrics.py  tasks.py
chronoq_server/chronoq_server/core/: __init__.py  queue.py  scheduler.py
demo-server/: CLAUDE.md  README.md  pyproject.toml
demo-server/chronoq_demo_server/: main.py
demo-server/chronoq_demo_server/api/: metrics.py
demo-server/chronoq_demo_server/core/: scheduler.py  worker.py
docs/: CLAUDE.md  README.md  api-reference.md  chronoq-architecture.excalidraw  chronoq-plan.md  configuration.md  diagrams.md  user-guide.md
docs/postman/: chronoq.postman_collection.json  chronoq.postman_environment.json
docs/v1/: README.md  architecture.md  chronoq-plan.md  configuration.md  user-guide.md
docs/v2/: BENCHMARKS.md  INTEGRATIONS.md  README.md  architecture.md  tech-stack.md
examples/celery-docker/: .gitignore  Dockerfile  README.md  docker-compose.yml  plot_jct.py  producer.py  run_ab.sh  worker.py
integrations/celery/: CLAUDE.md  README.md  demo.py  pyproject.toml
integrations/celery/chronoq_celery/: __init__.py  rolling.py  scheduler.py  signals.py
integrations/celery/examples/: README.md  toggle_demo.py
migrations/: README.md  alembic.ini  env.py
migrations/versions/: 001_initial_telemetry_table.py  002_add_telemetry_indexes.py
predictor/: README.md
predictor/chronoq_predictor/: __init__.py  predictor.py
predictor/chronoq_predictor/models/: __init__.py  base.py  heuristic.py
predictor/chronoq_predictor/storage/: base.py  memory.py
ranker/: CLAUDE.md  README.md  pyproject.toml
ranker/chronoq_ranker/: __init__.py  config.py  drift.py  features.py  predictor.py  ranker.py  schemas.py
ranker/chronoq_ranker/models/: __init__.py  base.py  gradient.py  heuristic.py  lambdarank.py  oracle.py
ranker/chronoq_ranker/storage/: __init__.py  base.py  memory.py  sqlite.py
server/: CLAUDE.md  README.md  pyproject.toml
server/chronoq_server/: main.py
server/chronoq_server/core/: scheduler.py  worker.py
tests/: CLAUDE.md  README.md  conftest.py
tests/bench/: test_baselines.py  test_experiments.py  test_metrics.py  test_plots.py  test_simulator.py  test_stub.py  test_traces.py
tests/celery/: test_examples.py  test_rolling.py  test_scheduler.py  test_signals.py  test_stub.py
tests/predictor/: test_config.py  test_features.py  test_gradient.py  test_heuristic.py  test_memory_storage.py  test_predictor.py  test_predictor_integration.py  test_schemas.py  test_sqlite_storage.py
tests/ranker/: test_compat_shims.py  test_config.py  test_drift.py  test_gradient.py  test_lambdarank.py  test_lambdarank_hypothesis.py  test_memory_storage.py  test_oracle.py  test_predict_scores.py  test_predictor.py  test_predictor_integration.py  test_retrain_trigger.py  test_retrain_trigger_precision.py  test_schemas.py  test_sqlite_storage.py
tests/server/: test_api_metrics.py  test_api_tasks.py  test_integration.py  test_queue.py  test_scheduler.py  test_worker.py
