[project]
name = "chronoq-bench"
version = "0.1.0"
description = "Benchmark harness for chronoq-ranker: SimPy simulator, public traces, 5 baselines, metrics"
requires-python = ">=3.11"
dependencies = [
    "chronoq-ranker",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["chronoq_bench"]

[tool.uv.sources]
chronoq-ranker = { workspace = true }
