[project]
name = "chronoq-bench"
version = "0.1.0"
description = "Benchmark harness for chronoq-ranker: SimPy simulator, public traces, 5 baselines, metrics"
requires-python = ">=3.11"
dependencies = [
    "chronoq-ranker",
    "simpy>=4.1",
    "matplotlib>=3.8",
    "pyarrow>=15",
    "pandas>=2.2",
    "huggingface_hub>=0.23",
    "numpy>=1.26",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["chronoq_bench"]

[tool.uv.sources]
chronoq-ranker = { workspace = true }
