[project]
name = "chronoq-predictor"
version = "0.1.0"
description = "ML-based task execution time predictor with auto-promoting models"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "scikit-learn>=1.4",
    "loguru>=0.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["chronoq_predictor"]
