[project]
name = "chronoq-demo-server"
version = "0.1.0"
description = "Reference FastAPI+Redis integration demo for chronoq-ranker (demoted from v1's standalone server)"
requires-python = ">=3.11"
dependencies = [
    "chronoq-ranker",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "redis>=5.0",
    "loguru>=0.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["chronoq_demo_server"]

[tool.uv.sources]
chronoq-ranker = { workspace = true }
