[project]
name = "chronoq-demo-server"
version = "0.2.0"
description = "Reference FastAPI+Redis integration demo for chronoq-ranker (demoted from v1's standalone server)"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Ahnaf Tanjid", email = "ahnaftanjid@cloudly.io"}]
keywords = ["scheduling", "fastapi", "redis", "demo", "learning-to-rank"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "chronoq-ranker",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "redis>=5.0",
    "loguru>=0.7",
]

[project.urls]
Homepage = "https://github.com/Ahnaf19/chronoq"
Repository = "https://github.com/Ahnaf19/chronoq"
Changelog = "https://github.com/Ahnaf19/chronoq/blob/main/CHANGELOG.md"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["chronoq_demo_server"]

[tool.uv.sources]
chronoq-ranker = { workspace = true }
