[project]
name = "chronoq-ranker"
version = "0.2.0"
description = "Learning-to-rank scheduling library for Python job queues."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Ahnaf Tanjid", email = "ahnaftanjid@cloudly.io"}]
keywords = ["scheduling", "learning-to-rank", "celery", "job-queue", "lightgbm", "lambdarank"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "lightgbm>=4.3",
    "numpy>=1.26",
    "pydantic>=2.0",
    "scikit-learn>=1.4",
    "loguru>=0.7",
]

[project.urls]
Homepage = "https://github.com/Ahnaf19/chronoq"
Repository = "https://github.com/Ahnaf19/chronoq"
Changelog = "https://github.com/Ahnaf19/chronoq/blob/main/CHANGELOG.md"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["chronoq_ranker"]
include = ["chronoq_ranker/py.typed"]
