[project]
name = "chronoq-celery"
version = "0.1.0"
description = "Celery integration for chronoq-ranker — LearnedScheduler with shadow/active/fifo modes"
requires-python = ">=3.11"
dependencies = [
    "chronoq-ranker",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["chronoq_celery"]

[tool.uv.sources]
chronoq-ranker = { workspace = true }
